# scicrypt

./: .gitignore  CITATION.cff  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
benches/: prime_gen.rs
book/: book.toml
book/src/: SUMMARY.md
book/src/he/: encrypt_decrypt.md  homomorphic_encryption.md  homomorphisms.md  setup.md
scicrypt/: Cargo.toml  README.md
scicrypt-bigint/: Cargo.toml  README.md
scicrypt-bigint/src/: leaky_ops.rs  lib.rs  scratch.rs
scicrypt-bigint/src/arithmetic/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  sub.rs
scicrypt-bigint/src/binary/: mod.rs  shr.rs
scicrypt-bigint/src/modular/: add.rs  inv.rs  mod.rs  mul.rs  pow.rs  rem.rs
scicrypt-he/: Cargo.toml  README.md
scicrypt-he/benches/: bench.rs  paillier.rs
scicrypt-he/src/: constants.rs  lib.rs
scicrypt-he/src/cryptosystems/: curve_el_gamal.rs  integer_el_gamal.rs  mod.rs  paillier.rs  rsa.rs
scicrypt-he/src/threshold_cryptosystems/: curve_el_gamal.rs  integer_el_gamal.rs  paillier.rs
scicrypt-numbertheory/: Cargo.toml  README.md
scicrypt-numbertheory/benches/: prime_gen.rs
scicrypt-numbertheory/src/: bigint.rs  lib.rs  modular.rs  primes.rs
scicrypt-traits/: Cargo.toml  README.md
scicrypt-traits/src/: cryptosystems.rs  homomorphic.rs  lib.rs  randomness.rs  secret_sharing.rs  security.rs  threshold_cryptosystems.rs
scicrypt/src/: lib.rs
src/: curve_el_gamal.rs  el_gamal.rs  integer_el_gamal.rs  lib.rs  number_theory.rs  paillier.rs  randomness.rs  rsa.rs
src/cryptosystems/: curve_el_gamal.rs  integer_el_gamal.rs  mod.rs  paillier.rs  rsa.rs
src/oblivious_transfer/: mod.rs  ot.rs
src/threshold_cryptosystems/: curve_el_gamal.rs  integer_el_gamal.rs  mod.rs  paillier.rs
