[package]
name = "scicrypt"
description = "Lightweight cryptographic building blocks for proof of concept implementations in applied cryptography"
version = "0.0.2"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/jellevos/scicrypt"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[dependencies]
rand_core = "0.5"
curve25519-dalek = "3"
