[package]
name = "scicrypt-bigint"
description = "A scicrypt crate implementing *mostly* constant-time bigints for modular integers"
version = "0.7.1"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-bigint"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[dependencies]
scicrypt-traits ={ version = "0.7.1", path = "../scicrypt-traits" }
serde = "1.0"
subtle = "2.4"
rug = { version = "1.17", default-features = false, features = ["integer", "rand", "serde"] }

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
