[package]
name = "scicrypt-he"
description = "A scicrypt crate implementing several well-known partially homomorphic (threshold) cryptosystems"
version = "0.4.0"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-he"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scicrypt-traits = { path = "../scicrypt-traits" }
scicrypt-numbertheory = { path = "../scicrypt-numbertheory" }
curve25519-dalek = "3"
rug = "1.13"
rand_core = "0.5"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
