[package]
name = "scicrypt-he"
description = "A scicrypt crate implementing several well-known partially homomorphic (threshold) cryptosystems"
version = "0.6.0"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-he"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
scicrypt-traits = { version = "0.6.0", path = "../scicrypt-traits" }
scicrypt-numbertheory = { version = "0.6.0", path = "../scicrypt-numbertheory" }
curve25519-dalek = "4.0.0-pre.2"
rug = "1.13"
rand_core = "0.6"

[dev-dependencies]
criterion = "0.3.3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[[bench]]
name = "paillier"
harness = false
