[package]
name = "scicrypt-he"
description = "A scicrypt crate implementing several well-known partially homomorphic (threshold) cryptosystems"
version = "0.7.1"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-he"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
scicrypt-traits = { version = "0.7.1", path = "../scicrypt-traits" }
scicrypt-numbertheory = { version = "0.7.1", path = "../scicrypt-numbertheory" }
scicrypt-bigint = { version = "0.7.1", path = "../scicrypt-bigint" }
curve25519-dalek = { package = "curve25519-dalek", version = "4.0.0-pre.2", features = ["serde"] }
rug = { version = "1.13", default-features = false, features = ["integer", "rand", "serde"]}
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
criterion = "0.3.3"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[[bench]]
name = "bench"
harness = false
