[package]
name = "scicrypt-numbertheory"
description = "A scicrypt crate implementing number theoretic algorithms such as random (safe) prime generation"
version = "0.6.0"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-numbertheory"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
scicrypt-traits = { version = "0.5.0", path = "../scicrypt-traits" }
rug = "1.13"
rand_core = "0.6"

[dev-dependencies]
primal = "0.3"
criterion = "0.3.3"
glass_pumpkin = "1.0.0"
rand = "0.8"
openssl = "0.10"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[[bench]]
name = "prime_gen"
harness = false
bench = false  # By default, this benchmark is turned off because it takes very long to complete
