[package]
name = "scicrypt-traits"
description = "A scicrypt crate defining general traits for cryptographic systems and functionalities"
version = "0.6.0"
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt-traits"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
rand_core = "0.6"
rug = { version = "1.13", default-features = false, features = ["integer"]}

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
