[package]
name = "scicrypt"
description = "Lightweight cryptographic building blocks for proof of concept implementations in multi-party computation"
version = "0.6.0"  # In sync with `scicrypt-traits`, `scicrypt-numbertheory`, and `scicrypt-he`
authors = ["Jelle Vos <scicrypt@jelle-vos.nl>"]
edition = "2018"
license = "MIT"
homepage = "https://crates.io/crates/scicrypt"
repository = "https://github.com/jellevos/scicrypt"
readme = "README.md"

[lib]
bench = false  # Disable default bench (we use criterion)

[dependencies]
scicrypt-traits = { version = "0.6.0", path = "../scicrypt-traits" }
scicrypt-numbertheory = { version = "0.6.0", path = "../scicrypt-numbertheory" }
scicrypt-he = { version = "0.6.0", path = "../scicrypt-he" }

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]
